# moose-full

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  PACKAGING.md  README.md  build_static_gsl.cmake  build_static_osg.cmake  build_static_sbml.cmake  cmake_moose_cpack.cmake  dependencies.txt  mgui.py
OBS/home:moose/moogli/: _service  build.sh  debian.changelog  debian.control  debian.rules  moogli-CentOS_6.spec  moogli-Fedora_22.spec  moogli-RHEL_5.spec  moogli-openSUSE_13.1.spec  moogli.dsc  moogli.spec.template  write_spec_files.py
OBS/home:moose/moose/: _service  build.sh  debian.rules  moose-CentOS_6.spec  moose-Fedora_20.spec  moose-SLE_11_SP3.spec  moose-ScientificLinux_6.spec  moose-openSUSE_12.2.spec  moose-openSUSE_12.3.spec  moose.spec.template  write_spec_files.py
OBS/home:moose/moose-gui/: _service  moose-gui.spec.template  write_spec_files.py
OBS/home:moose/moose-python/: build.sh  build_all.sh  debian.control  debian.install  moose-python-CentOS_7.spec  moose-python-Fedora_21.spec  moose-python-ScientificLinux_7.spec  moose-python-openSUSE_Tumbleweed.spec  moose-python.dsc  moose.spec.template  write_spec_files.py
OBS/home:moose/scripts/: _service  description  generate_spec_files.py  summary
debian/: changelog  control  moose-core.install  moose-gui.install  moose-moogli.install  moose-python.install  moose-python.postinst  moose-python.prerm  rules
dependencies/OpenSceneGraph-3.2.0/: CMakeLists.txt
dependencies/gsl/: CMakeLists.txt
dependencies/gsl-2.0/doc/: Makefile.in  gsl-ref.info  gsl-ref.info-1  gsl-ref.info-2  gsl-ref.info-3  gsl-ref.info-4  gsl-ref.info-5  gsl-ref.info-6
dependencies/gsl/doc/: Makefile.in  REMOVED
dependencies/libsbml-5.9.0/: CMakeLists.txt
dependencies/libsbml-5.9.0/src/: CMakeLists.txt
dependencies/libsbml-5.9.0/src/sbml/common/: libsbml-config-common.h
macosx/: Portfile  brew_moogli.sh  brew_moose.sh  moogli.rb  moose.rb
moogli/: CMakeLists.txt  Makefile  setup.py
moogli/_temp_moogli/: CMakeLists.txt
moogli/cmake_modules/: setup.py
moogli/debian/: control  rules
moogli/moogli/: CMakeLists.txt
moogli/rpm/: create_rpm_package.sh
moose-core/: CMakeLists.txt  cmake_moose_ctest.cmake
moose-gui/: mgui.py  mload.py
moose-gui/plugins/: kkit.py  kkitQGraphics.py
package_data/: moose.desktop  moosegui
packaging_scripts/: build_dmg_image_using_brew.sh  build_dmg_image_using_macport.sh  build_dmg_without_package_managers.sh  create_dmg.sh  create_dmg_file_using_brew.sh  create_rpm_package.sh  create_single_debian_package.sh  dmg_using_brew.sh  generate_rpm_links.sh  moose.spec  packages_local_using_cmake.sh  release_dmg_file.sh  sources.conf
packaging_scripts/DEBIAN/: control
packaging_scripts/Moose.app/: Info.plist
packaging_scripts/Moose.app/Contents/: Info.plist
packaging_scripts/Moose.app/Contents/MacOS/: moose  moose.command  moose.sh
packaging_scripts/debian/: control  rules
plugins/: kkitUtil.py  kkitViewcontrol.py  modelBuild.py
rpm/: NOTES.rpm.md  create_rpm_package.sh  moogli.spec  moose.spec
scripts/: add_moose_subtree.sh  build_and_test.sh  git_buildpackage_and_test.sh  pull_moose_branch.sh  push_moose_branch.sh
tests/: sanity_check.sh
